@@ -66,6 +66,8 @@ Version 1.3.15+svn:
    * Optimize roads placing of random map
    * when a unit miss an animation, the engine will base the replacement on
      the standing animation instead of the standing frame
+   * enabled caching images for lowmem unconditionally since it seems to save
+     memory (bug #11022)
 
 Version 1.3.15:
  * language and i18n:
